Add .L file for deletion in makefile

--- a/src/swpc_sh/makefile
+++ b/src/swpc_sh/makefile
@@ -159,8 +159,10 @@ clean:
 	/bin/rm -f $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb) $(o_gk) $(o_bicubic) $(o_daytim) $(o_wsac) $(o_ckprst) $(o_readini) $(o_geomap)  $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_pdebug) $(o_rdrmed) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r) ../../bin/swpc_sh.x
 	/bin/rm -f *.mod
 	/bin/rm -f *~
+	/bin/rm -f *.L
 
 clean2:
 	/bin/rm -f *.o
 	/bin/rm -f *.mod
 	/bin/rm -f *~
+	/bin/rm -f *.L
