--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -9,7 +9,6 @@
 ## FFLAGS (compiler flag)
 ## NCFLAG, NCLIB, NCINC  (netcdf library)
 ##
-##
 ## @copyright
 ##   Copyright 2013-2016 Takuto Maeda. All rights reserved.
 ##   This project is released under the MIT license.
@@ -30,7 +29,7 @@ ifeq ($(arch),mac-intel)
   FC      = ifort
   FFLAGS  = -O3 -xHOST \
             -warn all -heap-arrays 10 -static-intel -I../include \
-	    -D_INFO -D_ASSERT
+		    -D_INFO -D_ASSERT
   NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
@@ -105,3 +104,25 @@ ifeq ($(arch),es3)
   NCINC   = -I/usr/local/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
+
+##
+## Ubuntu with Gfortran
+##
+ifeq ($(arch),ubuntu-gfortran)
+
+  FC      = gfortran
+  FFLAGS  = -O2 -ffast-math -D_INFO -D_ASSERT -I../include
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/usr/lib/x86_64-linux-gnu
+  NCINC   = -I/usr/include
+  NETCDF  = -lnetcdff -lnetcdf
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+  endif
+
+endif
+
+
