--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -15,7 +15,6 @@
 ##
 ## ------------------------------------------------------------------------- ##
 
-
 # legacy option name build->arch
 ifdef build
 arch=$(build)
@@ -110,3 +109,25 @@ ifeq ($(arch),es3)
   NCINC   = -I/SX/usr/local/netcdf-4.1.3/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz -size_t64
 endif
+
+##
+## Ubuntu with Gfortran
+##
+ifeq ($(arch),ubuntu-gfortran)
+
+  FC      = mpif90
+  FFLAGS  = -O2 -ffast-math -D_INFO -D_ASSERT -I../include -fopenmp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/usr/lib/x86_64-linux-gnu
+  NCINC   = -I/usr/include
+  NETCDF  = -lnetcdff -lnetcdf
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+  endif
+
+endif
+
+
