Add ll2xy and xy2ll

--- a/src/tools/makefile
+++ b/src/tools/makefile
@@ -8,7 +8,8 @@
 ##
 ## --
 
-all: read_snp.x diff_snp.x mapregion.x fdmcond.x qmodel_tau.x grdsnp.x gen_rmed2d.x gen_rmed3d.x
+all: read_snp.x diff_snp.x mapregion.x fdmcond.x qmodel_tau.x grdsnp.x \
+	gen_rmed2d.x gen_rmed3d.x ll2xy.x xy2ll.x
 
 ## file search path
 
@@ -72,5 +73,11 @@ m_gammaf.o  : m_gammaf.F90 m_std.o
 ../../bin/fdmcond.x: fdmcond.F90 m_std.o m_getopt.o m_system.o m_debug.o
 	$(FC) $(NCLIB) $(NCINC) $(NCFLAG) $(FFLAGS) -o $@ $^ $(NETCDF)
 
+../../bin/ll2xy.x: ll2xy.F90 m_std.o m_geomap.o m_system.o m_gk.o m_debug.o
+	$(FC) $(FFLAGS) -o $@ $^ 
+
+../../bin/xy2ll.x: xy2ll.F90 m_std.o m_geomap.o m_system.o m_gk.o m_debug.o
+	$(FC) $(FFLAGS) -o $@ $^ 
+
 clean:
-	/bin/rm -f *.o *.mod *~ ../../bin/read_snp.x ../../bin/diff_snp.x ../../bin/mapregion.x ../../bin/fdmcond.x ../../bin/qmodel_tau.x ../../bin/grdsnp.x ../../bin/gen_rmed2d.x ../../bin/gen_rmed3d.x
+	/bin/rm -f *.o *.mod *~ ../../bin/read_snp.x ../../bin/diff_snp.x ../../bin/mapregion.x ../../bin/fdmcond.x ../../bin/qmodel_tau.x ../../bin/grdsnp.x ../../bin/gen_rmed2d.x ../../bin/gen_rmed3d.x ../../bin/ll2xy.x ../../bin/xy2ll.x
