--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -29,7 +29,7 @@ ifeq ($(arch),mac-intel)
   FC      = ifort
   FFLAGS  = -O3 -xHOST \
             -warn all -heap-arrays 10 -static-intel -I../include \
-		    -D_INFO -D_ASSERT
+		    -D_INFO
   NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
@@ -37,7 +37,7 @@ ifeq ($(arch),mac-intel)
 
   ifeq ($(debug),true)
     FFLAGS  = -CB -traceback -Wl,-no_pie -heap-arrays 10 \
-			  -static-intel -I../include -D_INFO -D_ASSERT -D_DEBUG
+			  -static-intel -I../include -D_INFO -D_DEBUG
   endif
 
 endif
@@ -48,7 +48,7 @@ endif
 ifeq ($(arch),mac-gfortran)
 
   FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -D_ASSERT -I../include
+  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -I../include
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
@@ -57,7 +57,7 @@ ifeq ($(arch),mac-gfortran)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+	          -D_INFO -D_DEBUG -I../include
   endif
 
 endif
@@ -67,14 +67,14 @@ endif
 ##
 ifeq ($(arch),eic)
   FC      = ifort
-  FFLAGS  = -xAVX -O3 -I../include -D_INFO -D_ASSERT
+  FFLAGS  = -xAVX -O3 -I../include -D_INFO
   NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
   NETCDF  =  -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 
   ifeq ($(publish),true)
-    FFLAGS = -xAVX -O3 -lmpi -I../include -D_INFO -D_ASSERT -static-intel -mcmodel=small
+    FFLAGS = -xAVX -O3 -lmpi -I../include -D_INFO -static-intel -mcmodel=small
   endif
 
 endif
@@ -98,7 +98,7 @@ ifeq ($(arch),es3)
   FC      = ifort
   FFLAGS  = -O3 -xHOST \
 	    -warn all -heap-arrays 10 -static-intel -I../include \
-	    -D_INFO -D_ASSERT
+	    -D_INFO 
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
@@ -111,7 +111,7 @@ endif
 ifeq ($(arch),ubuntu-gfortran)
 
   FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -D_INFO -D_ASSERT -I../include
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/lib/x86_64-linux-gnu
   NCINC   = -I/usr/include
@@ -120,7 +120,7 @@ ifeq ($(arch),ubuntu-gfortran)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+	          -D_INFO -D_DEBUG -I../include
   endif
 
 endif
