--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -27,7 +27,7 @@ endif
 ifeq ($(arch),mac-intel)
 
   FC      = mpif90
-  FFLAGS  = -O3 -xHOST -warn all -I../include -D_INFO -D_ASSERT
+  FFLAGS  = -O3 -xHOST -warn all -I../include -D_INFO
   NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
@@ -35,7 +35,7 @@ ifeq ($(arch),mac-intel)
 
   ifeq ($(debug),true)
     FFLAGS  = -CB -traceback -Wl,-no_pie -heap-arrays 10 \
-			  -static-intel -I../include -D_INFO -D_ASSERT -D_DEBUG
+			  -static-intel -I../include -D_INFO -D_DEBUG
   endif
 
 endif
@@ -47,7 +47,7 @@ endif
 ifeq ($(arch),mac-gfortran)
 
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -D_ASSERT -I../include -fopenmp
+  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -I../include -fopenmp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
@@ -56,7 +56,7 @@ ifeq ($(arch),mac-gfortran)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+	          -D_INFO -D_DEBUG -I../include
   endif
 
 endif
@@ -68,18 +68,18 @@ endif
 ##
 ifeq ($(arch),eic)
   FC      = ifort
-  FFLAGS  = -xAVX -O3 -lmpi -I../include -D_INFO -D_ASSERT -qopenmp
+  FFLAGS  = -xAVX -O3 -lmpi -I../include -D_INFO -qopenmp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 
   ifeq ($(publish),true)
-    FFLAGS = -xAVX -O3 -lmpi -I../include -D_INFO -D_ASSERT -static-intel -qopenmp -mcmodel=small
+    FFLAGS = -xAVX -O3 -lmpi -I../include -D_INFO -static-intel -qopenmp -mcmodel=small
   endif
 
   ifeq ($(debug),true)
-    FFLAGS  = -lmpi -qopenmp -CB -traceback -static-intel -I../include -D_INFO -D_ASSERT -D_DEBUG -mcmodel=small
+    FFLAGS  = -lmpi -qopenmp -CB -traceback -static-intel -I../include -D_INFO -D_DEBUG -mcmodel=small
   endif
 
 endif
@@ -103,14 +103,14 @@ endif
 ##
 ifeq ($(arch),es3)
   FC      = sxmpif90
-  FFLAGS  = -R2 -pi nest=5 -Wf"-pvctl fullmsg" -D_ES -f2003 -I ../include -D_INFO -D_ASSERT -Popenmp
+  FFLAGS  = -R2 -pi nest=5 -Wf"-pvctl fullmsg" -D_ES -f2003 -I ../include -D_INFO -Popenmp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/SX/usr/local/netcdf-4.1.3/lib
   NCINC   = -I/SX/usr/local/netcdf-4.1.3/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz -size_t64
 
   ifeq ($(debug),true)
-	FFLAGS = -eR -pi nest=5 -Wf"-pvctl fullmsg -init stack=nan heap=nan" -D_ES -f2003 -I ../include -D_INFO -D_ASSERT -Popenmp
+	FFLAGS = -eR -pi nest=5 -Wf"-pvctl fullmsg -init stack=nan heap=nan" -D_ES -f2003 -I ../include -D_INFO -Popenmp
   endif
 
 endif
@@ -121,7 +121,7 @@ endif
 ifeq ($(arch),ubuntu-gfortran)
 
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -D_INFO -D_ASSERT -I../include -fopenmp
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include -fopenmp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/lib/x86_64-linux-gnu
   NCINC   = -I/usr/include
@@ -130,7 +130,7 @@ ifeq ($(arch),ubuntu-gfortran)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_ASSERT -D_DEBUG -I../include
+	          -D_INFO -D_DEBUG -I../include
   endif
 
 endif
