Fixed updated user ID of github

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -37,7 +37,7 @@ extra:
     code: 'Consolas'
   social:
     - type: 'github'
-      link: 'https://github.com/takuto-maeda'
+      link: 'https://github.com/tktmyd'
 
 
 markdown_extensions:
