Update copyright information

--- a/src/swpc_psv/makefile
+++ b/src/swpc_psv/makefile
@@ -3,8 +3,7 @@
 ## makefile for SWPC_PSV
 ##
 ## @copyright
-##   Copyright 2013-2019 Takuto Maeda. All rights reserved.
-##   This project is released under the MIT license.
+##   Copyright 2013-2020 Takuto Maeda. All rights reserved. This project is released under the MIT license.
 ##
 ## ------------------------------------------------------------------------------------------------------------------------------ ##
 
