--- a/src/makefile
+++ b/src/makefile
@@ -3,8 +3,7 @@
 ## compile all SWPC codes
 ##
 ## @copyright
-##   Copyright 2013-2016 Takuto Maeda. All rights reserved.
-##   This project is released under the MIT license.
+##   Copyright 2013-2020 Takuto Maeda. All rights reserved. This project is released under the MIT license.
 ##
 ## ------------------------------------------------------------------------------------------------------------------------------ ##
 
