--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -6,7 +6,12 @@ site_author: 'Takuto Maeda'
 
 site_url: 'https://tktmyd.github.io/OpenSWPC'
 
-copyright: 'Copyright &copy 2019 Takuto Maeda. All Rights Reserved'
+# Repository
+repo_name: tktmyd/OpenSWPC
+repo_url: https://github.com/tktmyd/OpenSWPC
+edit_uri: ""
+
+copyright: 'Copyright &copy Takuto Maeda. All Rights Reserved'
 
 docs_dir: 'md'
 
@@ -18,8 +23,8 @@ theme:
   language: 'en'
   name: 'material'
   palette:
-    primary: 'black'
-    accent: 'teal'
+    primary: 'green'
+    accent: 'black'
   features:
     - tabs
     - instant
