--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -169,3 +169,16 @@ ifeq ($(arch),obcx)
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
 endif
+
+
+##
+## BDEC/Wisteria-Odyssey at the University of Tokyo
+##
+ifeq ($(arch),bdec-o)
+  FC      = module purge; module load fj fjmpi netcdf hdf5 netcdf-fortran; mpifrtpx
+  FFLAGS  = -O3 -Kfast -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -I ../include 
+  NCFLAG  = -D_NETCDF 
+  NCLIB = 
+  NCINC = -I/work/opt/local/aarch64/apps/fj/1.2.31/netcdf-fortran/4.5.3/include/
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
+endif
