--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -48,7 +48,7 @@ endif
 ifeq ($(arch),mac-gfortran)
 
   FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -I../include
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
@@ -118,7 +118,7 @@ ifeq ($(arch),ubuntu-gfortran)
   NETCDF  = -lnetcdff -lnetcdf
 
   ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
 	          -D_INFO -D_DEBUG -I../include
   endif
