--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -47,14 +47,14 @@ endif
 ifeq ($(arch),mac-gfortran)
 
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -fconvert=big-endian -D_INFO -I../include -fopenmp
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include -fopenmp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 
   ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
 	          -D_INFO -D_DEBUG -I../include
   endif
@@ -128,7 +128,7 @@ ifeq ($(arch),ubuntu-gfortran)
   NETCDF  = -lnetcdff -lnetcdf
 
   ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized -fconvert=big-endian\
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
 	          -D_INFO -D_DEBUG -I../include
   endif
