implement Munk's profile

--- a/src/swpc_psv/makefile
+++ b/src/swpc_psv/makefile
@@ -64,6 +64,7 @@ s_readini = m_readini.F90
 s_geomap  = m_geomap.F90
 s_pdebug = m_pdebug.F90
 s_rdrmed = m_rdrmed.F90
+s_seawater = m_seawater.F90
 
 ## main program
 s_main      = main.F90
@@ -85,6 +86,7 @@ o_wsac     = $(s_wsac:.F90=.o)
 o_readini = $(s_readini:.F90=.o)
 o_geomap  = $(s_geomap:.F90=.o)
 o_rdrmed = $(s_rdrmed:.F90=.o)
+o_seawater = $(s_seawater:.F90=.o)
 
 o_global  = $(s_global:.F90=.o)
 o_kernel  = $(s_kernel:.F90=.o)
@@ -121,6 +123,7 @@ $(o_wsac):    $(s_wsac)     $(o_std) $(o_daytim)  $(o_pdebug)
 $(o_readini): $(s_readini) $(o_std) $(o_system) $(o_pdebug)
 $(o_geomap):  $(s_geomap)  $(o_std) $(o_gk) $(o_pdebug)
 $(o_rdrmed):  $(s_rdrmed)  $(o_std) $(o_pdebug)
+$(o_seawater): $(s_seawater) $(o_std)
 
 $(o_output):  $(s_output)  $(o_std) $(o_global) $(o_pwatch) $(o_fdtool) $(o_wsac) $(o_readini) $(o_geomap) $(o_pdebug)
 $(o_global):  $(s_global)  $(o_std) $(o_fdtool) $(o_pwatch) $(o_system) $(o_pwatch) $(o_daytim) $(o_readini) $(o_pdebug)
@@ -137,7 +140,7 @@ $(o_ckprst):  $(s_ckprst)  $(o_std) $(o_system) $(o_global) $(o_kernel) $(o_medi
 $(o_vmodel0): $(s_vmodel0) $(o_std) $(o_global) $(o_system) $(o_fdtool) $(o_readini) $(o_geomap)
 $(o_vmodel1): $(s_vmodel1) $(o_std) $(o_global) $(o_readini)  $(o_pdebug)
 $(o_vmodel2): $(s_vmodel2) $(o_std) $(o_global) $(o_system) $(o_fdtool) $(o_bicubic) $(o_readini)   $(o_geomap) $(o_pdebug)
-$(o_vmodel3): $(s_vmodel3) $(o_std) $(o_global) $(o_readini)  $(o_pdebug)
+$(o_vmodel3): $(s_vmodel3) $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_seawater)
 $(o_vmodel1r): $(s_vmodel1r) $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_rdrmed)
 $(o_vmodel2r): $(s_vmodel2r) $(o_std) $(o_global) $(o_system) $(o_fdtool) $(o_bicubic) $(o_readini)   $(o_geomap) $(o_pdebug) $(o_rdrmed) $(o_fdtool)
 $(o_vmodel3r): $(s_vmodel3r) $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_rdrmed) $(o_fdtool)
@@ -154,7 +157,7 @@ $(o_pdebug):  $(s_pdebug) $(o_std)
 ## Targets
 ##
 
-../../bin/swpc_psv.x: $(s_main) $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb)  $(o_gk) $(o_bicubic) $(o_daytim) $(o_wsac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_pdebug) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r) $(o_vmodel0)
+../../bin/swpc_psv.x: $(s_main) $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb)  $(o_gk) $(o_bicubic) $(o_daytim) $(o_wsac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_pdebug) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r) $(o_vmodel0) $(o_seawater)
 	$(FC) $(NCINC) $(NCLIB)  $(FFLAGS) -o $@ $^ $(NETCDF)
 
 clean:
