--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -80,7 +80,7 @@ ifeq ($(arch),eic)
 endif
 
 ##
-## Fujitsu FX10, FX100 & K-computer
+## Fujitsu FX10, FX100 & K-computer (maybe obsolete)
 ##
 ifeq ($(arch),fx)
   FC      = gfortran
@@ -92,7 +92,7 @@ ifeq ($(arch),fx)
 endif
 
 ##
-## Earth Simulator 3
+## Earth Simulator 3 (obsolete)
 ##
 ifeq ($(arch),es3)
   FC      = ifort
@@ -102,6 +102,19 @@ ifeq ($(arch),es3)
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
+endif
+
+
+##
+## Earth Simulator 4
+##
+ifeq ($(arch),es4)
+  FC      = module purge; module load NetCDF4/all; gfortran
+  FFLAGS  = -O2 -ffast-math -D_INFO -I ../include
+  NCFLAG  = -D_NETCDF
+  NCLIB   = 
+  NCINC   = -I /opt/share/NetCDF4/netcdf-fortran/4.5.2/include/
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
