--- a/src/swpc_3d/makefile
+++ b/src/swpc_3d/makefile
@@ -61,7 +61,7 @@ s_pwatch  = m_pwatch.F90
 s_gk    = m_gk.F90
 s_bicubic = m_bicubic.F90
 s_daytim  = m_daytim.F90
-s_wsac    = m_wsac.F90
+s_sac     = m_sac.F90
 s_readini = m_readini.F90
 s_geomap  = m_geomap.F90
 s_pdebug  = m_pdebug.F90
@@ -84,7 +84,7 @@ o_pwatch   = $(s_pwatch:.F90=.o)
 o_gk     = $(s_gk:.F90=.o)
 o_bicubic  = $(s_bicubic:.F90=.o)
 o_daytim   = $(s_daytim:.F90=.o)
-o_wsac     = $(s_wsac:.F90=.o)
+o_sac     = $(s_sac:.F90=.o)
 o_readini  = $(s_readini:.F90=.o)
 o_geomap   = $(s_geomap:.F90=.o)
 o_rdrmed   = $(s_rdrmed:.F90=.o)
@@ -124,13 +124,13 @@ $(o_pwatch):   $(s_pwatch)   $(o_std) $(o_pdebug)
 $(o_gk):     $(s_gk)     $(o_std) $(o_pdebug)
 $(o_bicubic):  $(s_bicubic)  $(o_std) $(o_pdebug)
 $(o_daytim):   $(s_daytim)   $(o_std) $(o_pdebug)
-$(o_wsac):     $(s_wsac)     $(o_std) $(o_daytim)  $(o_pdebug)
+$(o_sac):     $(s_sac)     $(o_std) 
 $(o_readini):  $(s_readini)  $(o_std) $(o_system) $(o_pdebug)
 $(o_geomap):   $(s_geomap)   $(o_std) $(o_gk) $(o_pdebug)
 $(o_rdrmed):   $(s_rdrmed)  $(o_std) $(o_pdebug)
 $(o_seawater):  $(s_seawater) $(o_std)
 
-$(o_output):   $(s_output)   $(o_std) $(o_global) $(o_pwatch) $(o_fdtool) $(o_wsac)   $(o_readini) $(o_geomap) $(o_pdebug)
+$(o_output):   $(s_output)   $(o_std) $(o_global) $(o_pwatch) $(o_fdtool) $(o_sac)   $(o_readini) $(o_geomap) $(o_pdebug)
 $(o_global):   $(s_global)   $(o_std) $(o_fdtool) $(o_pwatch) $(o_system) $(o_pwatch) $(o_daytim) $(o_readini) $(o_pdebug)
 $(o_fdtool):   $(s_fdtool)   $(o_std) $(o_pdebug)
 $(o_source):   $(s_source)   $(o_std) $(o_global) $(o_fdtool) $(o_pwatch) $(o_readini) $(o_geomap) $(o_pdebug)
@@ -148,7 +148,7 @@ $(o_vmodel3):  $(s_vmodel3)  $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_
 $(o_vmodel1r):  $(s_vmodel1r)  $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_rdrmed) $(o_seawater)
 $(o_vmodel2r):  $(s_vmodel2)  $(o_std) $(o_system) $(o_global) $(o_fdtool) $(o_bicubic) $(o_readini)   $(o_geomap) $(o_pdebug)  $(o_rdrmed) $(o_fdtool) $(o_seawater)
 $(o_vmodel3r):  $(s_vmodel3)  $(o_std) $(o_global) $(o_readini)  $(o_pdebug)  $(o_rdrmed) $(o_fdtool) $(o_seawater)
-$(o_green):    $(s_green)     $(o_std) $(o_readini) $(o_global) $(o_wsac) $(o_output) $(o_geomap) $(o_pdebug) $(o_system) 
+$(o_green):    $(s_green)     $(o_std) $(o_readini) $(o_global) $(o_sac) $(o_output) $(o_geomap) $(o_pdebug) $(o_system) 
 
 
 ##
@@ -162,11 +162,11 @@ $(o_green):    $(s_green)     $(o_std) $(o_readini) $(o_global) $(o_wsac) $(o_ou
 ## Targets
 ##
 
-../../bin/swpc_3d.x: $(s_main) $(o_std) $(o_pdebug) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_gk) $(o_bicubic) $(o_daytim) $(o_wsac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_green) $(o_rdrmed) $(o_vmodel1r)  $(o_vmodel2r) $(o_vmodel3r) $(o_vmodel0) $(o_seawater)
+../../bin/swpc_3d.x: $(s_main) $(o_std) $(o_pdebug) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_green) $(o_rdrmed) $(o_vmodel1r)  $(o_vmodel2r) $(o_vmodel3r) $(o_vmodel0) $(o_seawater)
 	$(FC) $(NCINC) $(NCLIB) $(FFLAGS)  -o $@ $^  $(NETCDF)
 
 clean:
-	/bin/rm -f $(o_std) $(o_pdebug) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb) $(o_absorb_p) $(o_absorb_c) $(o_gk) $(o_bicubic) $(o_daytim) $(o_wsac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_green) $(o_rdrmed) $(o_vmodel1r)  $(o_vmodel2r) $(o_vmodel3r) $(o_vmodel0) $(o_seawater)  ../../bin/swpc_3d.x
+	/bin/rm -f $(o_std) $(o_pdebug) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_output) $(o_absorb) $(o_absorb_p) $(o_absorb_c) $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_ckprst) $(o_readini)  $(o_geomap) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_green) $(o_rdrmed) $(o_vmodel1r)  $(o_vmodel2r) $(o_vmodel3r) $(o_vmodel0) $(o_seawater)  ../../bin/swpc_3d.x
 	/bin/rm -f *.mod
 	/bin/rm -f *~
 	/bin/rm -f *.L
