--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -186,3 +186,24 @@ ifeq ($(arch),bdec-o)
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
 endif
+
+
+##
+## Mac OSX gfortran and netcdf provided by homebrew
+##
+ifeq ($(arch),mac-m1)
+
+  FC      = gfortran
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/opt/homebrew/lib
+  NCINC   = -I/opt/homebrew/include
+  NETCDF  = -lnetcdf -lnetcdff
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_DEBUG -I../include
+  endif
+
+endif
