--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -192,9 +192,31 @@ endif
 ##
 ifeq ($(arch),bdec-o)
   FC      = module purge; module load fj fjmpi netcdf hdf5 netcdf-fortran; mpifrtpx
-  FFLAGS  = -O3 -Kfast -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -I ../include 
+  FFLAGS  = -O3 -Keval -Kfp_contract -Kfp_relaxed -Kfz -Kilfunc -Kmfunc -Komitfp -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -I ../include
   NCFLAG  = -D_NETCDF 
   NCLIB = 
   NCINC = -I/work/opt/local/aarch64/apps/fj/1.2.31/netcdf-fortran/4.5.3/include/
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
+endif
+
+
+##
+## gfortran, netcdf for M1 Mac (with homebrew)
+##
+
+ifeq ($(arch),mac-m1)
+
+  FC      = mpif90
+  FFLAGS  = -O2 -ffast-math -D_INFO -I../include -fopenmp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/opt/homebrew/lib
+  NCINC   = -I/opt/homebrew/include
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_DEBUG -I../include
+  endif
+
 endif
