--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -124,7 +124,7 @@ ifeq ($(arch),es4)
   NCFLAG  = -D_NETCDF
   NCLIB   =  -L /opt/nec/ve/lib/
   NCINC   = -I /opt/share/NetCDF4_ve/netcdf-fortran/4.5.2/include/
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lsz -lz -lnfort
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lsz -lz 
 
   ifeq ($(debug),true)
     FFLAGS = -fbounds-check -O0 -D_INFO -fopenmp -I ../include 
