--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -35,13 +35,15 @@ theme:
 
 nav:
   - index.en.md
-  - Set up:
-    - 1._SetUp/0101_env.en.md
+  - New_Feature.md
+  - How to build:
+    - 1._SetUp/0100_trial.en.md
+    - 1._SetUp/0101_env.en.md    
     - 1._SetUp/0102_tree.en.md
     - 1._SetUp/0103_compile.en.md
     - 1._SetUp/0104_dataset.en.md
     - 1._SetUp/0105_parallel.en.md
-  - Parameters:
+  - Parameter settings:
     - 2._Parameters/0201_description.en.md
     - 2._Parameters/0202_env.en.md
     - 2._Parameters/0203_coord.en.md
@@ -58,7 +60,8 @@ nav:
     - 3._Tools/0302_vmodel.en.md
     - 3._Tools/0303_parameter.en.md
     - 3._Tools/0304_rmedia.en.md
-    - 3._Tools/0305_misc.en.md
+    - 3._Tools/0305_python.en.md
+    - 3._Tools/0306_misc.en.md
   - Hints:
     - 4._Hints/0401_modelset.en.md
     - 4._Hints/0402_modification.en.md
@@ -85,7 +88,7 @@ plugins:
         ja: Japanese
       nav_translations:
         ja:
-          Set up: 準備
+          How to build: ビルドから実行まで
           Parameters: パラメタ設定
           Tools: 関連ツール
           Hints: 計算のヒント
