--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -67,21 +67,12 @@ endif
 ## EIC @ ERI,U-TOKYO (2020 System)
 ##
 ifeq ($(arch),eic)
-  FC      = ifort
-  FFLAGS  = -xCORE-AVX2 -O3 -lmpi -I../include -D_INFO -qopenmp
+  FC      = module purge; module load intel mpt lib/NetCDF lib/HDF5; ifort
+  FFLAGS  = -xCORE-AVX512 -O3 -I../include -D_INFO -qopenmp -lmpi
   NCFLAG  = -D_NETCDF
-  NCLIB   = -L$(HOME)/local/lib
-  NCINC   = -I$(HOME)/local/include
+  NCLIB   = 
+  NCINC   = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
-
-  ifeq ($(publish),true)
-    FFLAGS = -xCORE-AVX2 -O3 -lmpi -I../include -D_INFO -static-intel -qopenmp -mcmodel=small
-  endif
-
-  ifeq ($(debug),true)
-    FFLAGS  = -lmpi -qopenmp -CB -traceback -static-intel -I../include -D_INFO -D_DEBUG -mcmodel=small
-  endif
-
 endif
 
 
