--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -198,7 +198,7 @@ endif
 ifeq ($(arch),mac-m1)
 
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math   -fopenmp
+  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
   NCFLAG  = -D_NETCDF
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
